--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules ./src/index.js"
   },
   "author": "kuntal maity",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
+    "nodemon": "^3.0.3"
   }
 }
