Update dependencies and add authorization checks

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,12 @@ MONGODB_URI=
 CORS_ORIGIN=
 
 CLUSTER_PASSWORD=
+
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+
+FORGOT_PASSWORD_SECRET=
+FORGOT_PASSWORD_EXPIRY=
+
+GMAIL_APP_PASSWORD=
+GMAIL_APP_USER=
